Fixed scrolling issue on ios

--- a/app/app.css
+++ b/app/app.css
@@ -14,7 +14,6 @@ html, body {
 }
 
 :global(#main) {
-    overflow: auto;
     height: 100%;
 }
 
