--- a/app/components/content/content.css
+++ b/app/components/content/content.css
@@ -37,7 +37,7 @@
     background-repeat: no-repeat;
     color: #fff;
     min-height: 130px;
-    background-position: left center;
+    background-position: top;
 }
 .titleIcon {
     display: inline-block;
